-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.2.0
-
None
-
3
-
4713
One one of our MDS nodes, we see a pretty voluminous stream of "Object doesn't exist" messages from the mdt_getattr_name_lock() function, and the associated LU_OBJECT_DEBUG output.
We looked at code briefly and suspect that this is a race between an unlink and a getattr, which would be completely normal and expected.
So why does this message exist? Is the race being handled correctly?
- duplicates
-
LU-966 post-fsck MDS LBUG during recovery due to missing FID
-
- Resolved
-
- is duplicated by
-
LU-1350 Parent doesn't exist!
-
- Resolved
-
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.1 to version 2.1.2 Server support for kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....